# powertoys_text_to_speech

./: README.md  pyproject.toml  setup_project.py
src/: main.py  powertoys_text_to_speech_edge.py  powertoys_text_to_speech_edge.py - Shortcut.lnk  voice_test.py
